day-15/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-kyverno-validation
spec:
  containers:
  - name: nginx-kyverno-validation
    image: nginx:latest
