day-15/disallow-root-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
  annotations:
    policies.kyverno.io/description: "Disallow containers from running as root user"
spec:
  validationFailureAction: Enforce
#  background: true
  rules:
  - name: check-runAsNonRoot
    match:
      resources:
        kinds:
        - Pod
    exclude:
      resources:
        namespaces:
        - giropops
    validate:
      message: "Running as root user is not allowed"
      pattern:
        spec:
          containers:
          - securityContext:
              runAsNonRoot: true
